Issue #1004 - Do not cut off text on the contributors page

--- a/webcompat/static/css/development/components/contributors.css
+++ b/webcompat/static/css/development/components/contributors.css
@@ -124,7 +124,7 @@
   display:inline-block;
   font-size:20px;
   vertical-align:middle;
-  margin-left:2.2em;
+  padding-left:2.2em;
   line-height:normal;
 }
 .contributors__list__item--lvl_down {
